test/expected/cast_rgi.out
cast x into register int
                     ^
22: error: can not cast into register
